sdm845-common: Implement global thermal modes
Play nice with ThermalController from PE, this is a global profile for all the system.

Change-Id: Ie0a347889c3d944fe59498efd521fa0e40a3d408

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -383,4 +383,7 @@
     <!-- Whether to allow sending active app broadcast -->
     <bool name="config_allowActivePackageBroadcast">true</bool>
 
+    <!-- Support revo perf modes -->
+    <bool name="config_supportPerfModes">true</bool>
+
 </resources>
